--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,40 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  box-sizing: border-box;
+}
+
+.asteroid {
+    width: 100vw;
+    height: 100vh;
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.asteroid_inputs {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    background-color: rgba(50,50,50,0.5);
+    padding: 50px;
+}
+
+.asteroid_date_input {
+    width: 40%;
+    border: none;
+
+}
+
+.asteroid_req_send {
+    width: 60%;
+    background-color: white;
+    text-align: center;
+    color: blue;
+    padding: 10px;
+    border-radius: 5px;
+    margin: 10px;
 }
