basic list styling completed

--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,6 @@ body {
     justify-content: center;
     align-content: space-between;
     flex-wrap: wrap;
-    /*background-color: rgba(50,50,50,0.8);*/
     padding: 50px;
     border-radius: 5px;
 }
@@ -86,20 +85,13 @@ body {
 
 .asteroid_inputs_alternate {
     grid-row: 1 / 3;
-    grid-column: 2 / 9;
+    grid-column: 1 / 10;
     display: flex;
     justify-content: space-around;
     align-items: center;
     flex-wrap: nowrap;
-    /*background-color: rgba(50,50,50,0.8);*/
-    /*padding: 50px;*/
-    padding-left: 20%;
     border-radius: 5px;
 }
-
-/*.asteroid_inputs_alternate > div {
-    height: 50%;
-}*/
 
 .asteroid_inputs_alternate > .asteroid_input_instructions {
     display: none;
@@ -112,11 +104,10 @@ body {
     align-content: center;
     flex-wrap: wrap;
     text-align: center;
-    width: 30%;
+    width: 25%;
     margin: 10px 0;
     padding: 10px 0;
     border-radius: 5px;
-    /*border-radius: 5px;*/
     color: white;
     background-color: rgba(150,150,150,0.6);
 }
@@ -127,7 +118,7 @@ body {
 }
 
 .asteroid_inputs_alternate > .asteroid_req_send {
-    width: 30%;
+    width: 35%;
     color: white;
     background-color: rgba(150,150,150,0.6);
     text-align: center;
@@ -171,4 +162,42 @@ body {
     background-color: rgba(200,200,200,0.5);
     width: 80%;
     margin: 0 10%;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+    align-items: center;
+}
+
+.neo_name, .neo_link, .neo_dangerous {
+    padding: 5px;
+    margin: 5px;
+    border-radius: 5px;
+    text-align: center;
+}
+
+.neo_name {
+    width: 40%;
+    font-size: 1.25em;
+    background-color: black;
+    color: white;
+    font-weight: 500;
+}
+
+.neo_link {
+    width: 30%;
+    font-size: 0.75em;
+    text-decoration: none;
+}
+
+.neo_dangerous {
+    width: 30%;
+    color: white
+}
+
+.danger {
+    background-color: red;
+}
+
+.no_danger {
+    background-color: green;
 }
